Pint Changelog
==============

0.20 (unreleased)
-----------------

- Nothing changed yet.


0.19 (2022-04-04)
-----------------

- Better separation between parsing and loading of definitions.
  Implement a parsed "binary" version of "textual" definition files.
  Infrastructure to disk cache parsed definition files and RegistryCache
  resulting in a 10X speed up in registry instantiation when enabled.
  (Issue #1465)
- Deprecate the old format defaulting behavior and prepare for the new one (Issue #1407)
- Fix a bug for offset units of higher dimension, e.g. gauge pressure.
  (Issue #1066, thanks dalito)
- Fix type hints of function wrapper (Issue #1431)
- Upgrade min version of uncertainties to 3.1.4
- Add a example for `register_unit_format` to the formatting docs (Issue #1422).
- Fix setting options of the application registry (Issue #1403).
- Fix Quantity & Unit `is_compatible_with` with registry active contexts (Issue #1424).
- Allow Quantity to parse 'NaN' and 'inf(inity)', case insensitive
- Fix casting error when using to_reduced_units with array of int.
  (Issue #1184)
- Use default numpy `np.printoptions` available since numpy 1.15.
- Implement `numpy.nanprod` (Issue #1369)
- Fix default_format ignored for measurement (Issue #1456)
- Add `pint.testing` with functions to compare pint objects in tests (Issue #1421).
- Fix handling modulo & floordiv operator in pint_eval (Issue #1470)
- Fix `to_compact` and `infer_base_unit` for non-float non_int_type.
- Fix `to_reduced_units` to work with dimensionless units. (Issue #919)
- Fix parsing of units string with same canonalized name (Issue #1441 & #1142)
- The pint-pandas example notebook has been moved to the pint-pandas package.

### New Units
- `sverdrup` (PR #1404)
- `cooling_tower_ton` (PR #1484)

### Breaking Changes

- Update hour default symbol to `h`. (Issue #719)
- Replace `h` with `ℎ` (U+210E) as default symbol for planck constant.
- Change minimal Python version support to 3.8+